@@ -1,3 +1,13 @@
+2002-10-01  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* tests/unixSelect.test (unixSelect-1.1[89]): Altered these tests
+	to work around [Bug #616923]
+	* unix/tkUnixSelect.c (SelRcvIncrProc,TkSelPropProc): It turns out
+	a much simpler and more robust solution is possible if we leverage
+	Tcl's encoding engine by using the same code path as for the
+	normal string selection.  It might be a bit slower, but it should
+	be a lot more correct.  [Bug #614650]
+
 2002-09-30  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tests/panedwindow.test: added panedwindow-28.[12]
